# TIL

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  codecov.yml  main.py  pyproject.toml
.claude/: settings.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-study-task.yml  backend-study-topic.yml
.github/workflows/: claude-code-review.yml  claude-review.yml  claude.yml  coding-test.yml  redis.yml  release-notes.yml
RAG/: README.md  pyproject.toml
RAG/data/: redis-basics.md  redis-ttl.md
RAG/docs/: 01-what-is-rag.md
RAG/src/: v1_no_retrieval.py  v1_stuff_everything.py
docs/: github-study-workflow.md  python-guidelines.md  release-notes-automation.md
scripts/: generate_release_notes.py
독후감/: CLAUDE.md  README.md
독후감/돈의심리학/: README.md
독후감/멘탈을바꿔야인생이바뀐다/: README.md
독후감/어른의행복은조용하다/: README.md  어른의행복은조용하다.md
독후감/제로투원/: 제로투원.md
독후감/직감의힘/: README.md
독후감/호의에대하여/: README.md  호의에대하여.md
레디스/: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
레디스/.claude/: settings.json
레디스/app/: dependencies.py  main.py
레디스/app/repositories/: user_profile_repository.py
레디스/app/representations/: user_request.py  user_response.py
레디스/app/routes/: basic_route.py  user_route.py
레디스/app/services/: user_profile_cache.py  user_profile_service.py
레디스/app/storages/: redis.py  sqlite.py
레디스/docs/: cache-aside-ttl-strategy.md
레디스/tests/: conftest.py
레디스/tests/routes/: test_user_route.py
코딩테스트/: CLAUDE.md  README.md  pyproject.toml
코딩테스트/.claude/: settings.json
코딩테스트/warm_up/: 10_step_대지.py  (+73 more)
