[project]
name = "til"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 79
include = ["*.py"]
exclude = [
    ".venv",

]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10