[project]
name = "rag-study"
version = "0.1.0"
description = "RAG study"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anthropic>=0.113.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
