[project]
name = "redis-study"
version = "0.1.0"
description = "redis study"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "fastapi[standard]>=0.128.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=5.0.0",
    "ty>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "testcontainers>=4.14.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]